--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 npm-debug.log
 yarn-error.log
 
+package-lock.json
+
 # IDEs and editors
 .idea/
 .project
@@ -40,3 +42,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
